add dashboard layout and filtering structure

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,8 +5,8 @@ website:
   title: "sva-codelib"
   navbar:
     left:
-      - href: index.qmd
-        text: Home
+      - href: dashboard/index.qmd
+        text: Dashboard
       - about.qmd
 
 format:
