test triggering github action

--- a/dashboard/projects.json
+++ b/dashboard/projects.json
@@ -1,10 +1,14 @@
 [
-    {
-      "title": "Demo-prosjekt",
-      "authors": ["ktvedt"],
-      "language": "R",
-      "keywords": ["regression"],
-      "theme": "example",
-      "model": "OLS"
-    }
-  ]
+  {
+    "title": "Demo-prosjekt",
+    "authors": [
+      "ktvedt"
+    ],
+    "language": "R",
+    "keywords": [
+      "regression"
+    ],
+    "theme": "example",
+    "model": "OLS"
+  }
+]
