--- a/dashboard/projects.json
+++ b/dashboard/projects.json
@@ -25,8 +25,7 @@
     ],
     "language": "Python",
     "keywords": [
-      "classification",
-      "charts"
+      "classification"
     ],
     "themes": [
       "education",
