script upload: fd-trygd

--- a/projects/demo-project1/metadata.yml
+++ b/projects/demo-project1/metadata.yml
@@ -1,6 +1,7 @@
 title: "Demo-prosjekt"
 authors: ["ktvedt"]
 language: "R"
+data: ["test"]
 keywords: ["regression"]
 themes: ["example"]
 methods: ["OLS"]
