clean up action trigger: library build

--- a/.github/workflows/build-metadata.yml
+++ b/.github/workflows/build-metadata.yml
@@ -11,8 +11,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repo 
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -31,5 +33,5 @@ jobs:
           git config user.email "actions@github.com"
           git add dashboard/projects.json || true
           git diff --cached --quiet || git commit -m "Update projects.json"
-          git pull --rebase
+          git pull origin main --rebase
           git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/ktvedt/sva-codelib.git
