--- a/.github/workflows/build-metadata.yml
+++ b/.github/workflows/build-metadata.yml
@@ -4,7 +4,6 @@ on:
   push:
     paths:
       - "projects/**"
-      - "generate_projects_json.py"
 
 jobs:
   build-metadata:
@@ -27,11 +26,11 @@ jobs:
       - name: Generate projects.json
         run: python generate_projects_json.py
 
-      - name: Commit and push projects.json
-        run: |
-          git config user.name "github-actions"
-          git config user.email "actions@github.com"
-          git add dashboard/projects.json || true
-          git diff --cached --quiet || git commit -m "Update projects.json"
-          git pull origin main --rebase
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/ktvedt/sva-codelib.git
+      # - name: Commit and push projects.json
+      #   run: |
+      #     git config user.name "github-actions"
+      #     git config user.email "actions@github.com"
+      #     git add dashboard/projects.json || true
+      #     git diff --cached --quiet || git commit -m "Update projects.json"
+      #     git pull origin main --rebase
+      #     git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/ktvedt/sva-codelib.git
