--- a/projects/FD-trygd/metadata.yml
+++ b/projects/FD-trygd/metadata.yml
@@ -4,4 +4,4 @@ language: "Stata"
 data: ["FD-trygd", "registerdata"]
 methods: ["Forløpsanalyse"]
 themes: ["sysselsetting", "arbeidssøkere", "overføringer"]
-description: "Tilrettelegging av mikrodata fra SSBs variabelområde FD-Trygd, inkl. sysselsetting, arbeidssøkere, ytelser og andre overføringer: AAP, sosialhjelp, sykepenger, uføretrygd, uførepensjon, kvalifiseringsprogrammet (KVP). Les mer om FD-Trygd her: https://www.ssb.no/arbeid-og-lonn/artikler-og-publikasjoner/tilrettelegging-av-mikrodata-fra-ssbs-variabelomrade-fd-trygd: https://www.ssb.no/data-til-forskning/utlan-av-data-til-forskere/variabellister/fd-trygd"
+description: "Tilrettelegging av mikrodata fra SSBs variabelområde FD-Trygd, inkl. sysselsetting, arbeidssøkere, ytelser og andre overføringer: AAP, sosialhjelp, sykepenger, uføretrygd, uførepensjon, kvalifiseringsprogrammet (KVP)."
