--- a/.github/workflows/build-metadata.yml
+++ b/.github/workflows/build-metadata.yml
@@ -4,6 +4,11 @@ on:
   push:
     paths:
       - "projects/**"
+      - "generate_projects_json.py"
+      - "dashboard/**"
+      - "styles.css"
+      - "index.qmd"
+      - "_quarto.yml"
 
 jobs:
   build-metadata:
