--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,7 @@ project:
 
 website:
   title: ""
-  # site-url: "https://ktvedt.github.io/sva-codelib/"
+  site-url: "https://ktvedt.github.io/sva-codelib/"
   navbar:
     left:
       - href: dashboard/index.qmd
