deploy: d2538c2931b46997ee936092eff444da27f29e28

--- a/dashboard/projects.json
+++ b/dashboard/projects.json
@@ -12,10 +12,9 @@
       "Random Forest"
     ],
     "themes": [
-      "education",
-      "ML"
+      "education"
     ],
-    "description": "Hvilket prosjekt det er brukt til, publikasjoner, datasett. link til publikasjoner?.",
+    "description": "default",
     "folder": "demo-project2",
     "files": []
   },
