--- a/dashboard/projects.json
+++ b/dashboard/projects.json
@@ -50,7 +50,7 @@
     ]
   },
   {
-    "title": "Microdata-script",
+    "title": "Sosialhjelp i microdata.no",
     "authors": [
       "Kristian Tvedt"
     ],
