--- a/projects/microdata-sosialhjelp/metadata.yml
+++ b/projects/microdata-sosialhjelp/metadata.yml
@@ -1,4 +1,4 @@
-title: "Microdata-script"
+title: "Sosialhjelp i microdata.no"
 authors: ["Kristian Tvedt"]
 language: "microdata.no"
 data: ["registerdata"]
