--- a/dashboard/projects.json
+++ b/dashboard/projects.json
@@ -1,5 +1,32 @@
 [
   {
+    "title": "Alternative medier og islam",
+    "authors": "Siri Frisli",
+    "language": "R",
+    "data": [
+      "text corpus"
+    ],
+    "methods": [
+      "web scraping",
+      "topic modeling"
+    ],
+    "themes": [
+      "alternative medier",
+      "tekstanalyse",
+      "mixed-methods"
+    ],
+    "description": "Unders\u00f8ker diskursive trender og endringer i m\u00e5ten alternative medier tilknyttet det norske ytre h\u00f8yre har representert islam \u00e5rene 2003-2021. Les mer her: http://urn.nb.no/URN:NBN:no-98456",
+    "folder": "altmedia-islam-topic-modeling",
+    "files": [
+      "altmedia-islam-topic-modeling/.DS_Store",
+      "altmedia-islam-topic-modeling/Bearbeiding.R",
+      "altmedia-islam-topic-modeling/SOS4090_metadata.xlsx",
+      "altmedia-islam-topic-modeling/README.md",
+      "altmedia-islam-topic-modeling/Innsamling.R",
+      "altmedia-islam-topic-modeling/Analyse.R"
+    ]
+  },
+  {
     "title": "Spatial regression",
     "authors": [
       "Kristian Tvedt"
@@ -75,6 +102,31 @@
     ]
   },
   {
+    "title": "COVID-19-vaksiner: Misinformasjon og diskurser",
+    "authors": "Siri Frisli",
+    "language": "R",
+    "data": "text corpus",
+    "methods": [
+      "Topic modeling",
+      "sentiment analysis",
+      "mixed-methods"
+    ],
+    "themes": [
+      "Sosiale medier",
+      "tekstanalyse",
+      "misinformasjon"
+    ],
+    "description": "Unders\u00f8ker diskursive trender innen vaksinemisinformasjon fra COVID-19 pandemien. Les mer her: https://doi.org/10.1177/20563051251347614",
+    "folder": "CADS-covid-topic-modeling",
+    "files": [
+      "CADS-covid-topic-modeling/.DS_Store",
+      "CADS-covid-topic-modeling/sentiments.R",
+      "CADS-covid-topic-modeling/CADS_metadata.xlsx",
+      "CADS-covid-topic-modeling/STM.R",
+      "CADS-covid-topic-modeling/topics_30.txt"
+    ]
+  },
+  {
     "title": "FD-Trygd: Vasking av mikrodata",
     "authors": [
       "\u00c5smund Hermansen"
@@ -105,6 +157,37 @@
       "FD-trygd/Sysselsatt.do",
       "FD-trygd/Uf\u00f8repensjon.do",
       "FD-trygd/KVP.do"
+    ]
+  },
+  {
+    "title": "COVID-19 klassifikasjon av misinformasjon",
+    "authors": "Siri Frisli",
+    "language": "R",
+    "data": "text corpus",
+    "methods": [
+      "API",
+      "data wrangling",
+      "maskinl\u00e6ring",
+      "tekstklassifisering"
+    ],
+    "themes": [
+      "Sosiale medier",
+      "tekstanalyse",
+      "misinformasjon"
+    ],
+    "description": [
+      "Henter og klargj\u00f8r Twitter data, og trener en semi-supervised self-training klassifiaksjonsmodell for \u00e5 gjenkjenne misinformasjon. Les mer her: https://doi.org/10.1007/s42001-025-00367-x"
+    ],
+    "folder": "SSST-covid-classify-misinfo",
+    "files": [
+      "SSST-covid-classify-misinfo/Classification",
+      "SSST-covid-classify-misinfo/SSST_metadata.xlsx",
+      "SSST-covid-classify-misinfo/.DS_Store",
+      "SSST-covid-classify-misinfo/Analysis",
+      "SSST-covid-classify-misinfo/Processing",
+      "SSST-covid-classify-misinfo/anms.xlsx",
+      "SSST-covid-classify-misinfo/README.md",
+      "SSST-covid-classify-misinfo/Scrapers"
     ]
   }
 ]
