--- a/projects/altmedia-islam-topic-modeling/metadata.yml
+++ b/projects/altmedia-islam-topic-modeling/metadata.yml
@@ -1,6 +1,6 @@
 title: "Alternative medier og islam"
-authors: "Siri Frisli"
-language: "R"
+authors: ["Siri Frisli"]
+language: ["R"]
 data: ["text corpus"]
 methods: ["web scraping", "topic modeling"]
 themes: ["alternative medier", "tekstanalyse", "mixed-methods"]
