repo update and project card title font

--- a/projects/altmedia-islam-topic-modeling/metadata.yml
+++ b/projects/altmedia-islam-topic-modeling/metadata.yml
@@ -1,7 +1,9 @@
 title: "Alternative medier og islam"
-authors: ["Siri Frisli"]
-language: ["R"]
-data: ["text corpus"]
+authors: "Siri Frisli"
+language: "R"
+data: "text corpus"
 methods: ["web scraping", "topic modeling"]
 themes: ["alternative medier", "tekstanalyse", "mixed-methods"]
-description: "Undersøker diskursive trender og endringer i måten alternative medier tilknyttet det norske ytre høyre har representert islam årene 2003-2021. Les mer her: http://urn.nb.no/URN:NBN:no-98456"
+description: "Undersøker diskursive trender og endringer i måten alternative medier\
+  \ tilknyttet det norske ytre høyre har representert islam årene 2003-2021. Les mer\
+  \ her: http://urn.nb.no/URN:NBN:no-98456"
