--- a/projects/microdata-sosialhjelp/metadata.yml
+++ b/projects/microdata-sosialhjelp/metadata.yml
@@ -2,6 +2,6 @@ title: "Sosialhjelp i microdata.no"
 authors: ["Kristian Tvedt"]
 language: "microdata.no"
 data: ["registerdata"]
-themes: ["sosialhjelp", "innvandring", "sosialhjelpsmottakere"]
+themes: ["sosialhjelp", "innvandring", "kommuneanalyse"]
 methods: ["deskriptiv statistikk", "logit"]
 description: "Definerer sosialhjelpsmottakere, langtidsmottakere og gjengangere i Microdata.no. Inkluderer deskriptiv statistikk på kommunenivå og logistisk regresjon."
