--- a/dashboard/projects.json
+++ b/dashboard/projects.json
@@ -16,7 +16,6 @@
     "description": "Unders\u00f8ker diskursive trender og endringer i m\u00e5ten alternative medier tilknyttet det norske ytre h\u00f8yre har representert islam \u00e5rene 2003-2021. Les mer her: http://urn.nb.no/URN:NBN:no-98456",
     "folder": "altmedia-islam-topic-modeling",
     "files": [
-      "altmedia-islam-topic-modeling/.DS_Store",
       "altmedia-islam-topic-modeling/Bearbeiding.R",
       "altmedia-islam-topic-modeling/README.md",
       "altmedia-islam-topic-modeling/Innsamling.R",
@@ -43,7 +42,6 @@
     "description": "Identifiserer romlig autokorrelasjon i r\u00e5data og regresjonsresidualer. Spesifiserer og tester alternative modeller: SEM og SAR.",
     "folder": "spatial-regression",
     "files": [
-      "spatial-regression/.DS_Store",
       "spatial-regression/spatial_regression.R",
       "spatial-regression/Data"
     ]
@@ -113,7 +111,6 @@
     "description": "Definerer sosialhjelpsmottakere, langtidsmottakere og gjengangere i Microdata.no. Inkluderer deskriptiv statistikk p\u00e5 kommuneniv\u00e5 og logistisk regresjon.",
     "folder": "microdata-sosialhjelp",
     "files": [
-      "microdata-sosialhjelp/.DS_Store",
       "microdata-sosialhjelp/microdata logit sosialhjelpsmottakere.txt"
     ]
   },
@@ -135,7 +132,6 @@
     "description": "Unders\u00f8ker diskursive trender innen vaksinemisinformasjon fra COVID-19 pandemien. Les mer her: https://doi.org/10.1177/20563051251347614",
     "folder": "CADS-covid-topic-modeling",
     "files": [
-      "CADS-covid-topic-modeling/.DS_Store",
       "CADS-covid-topic-modeling/sentiments.R",
       "CADS-covid-topic-modeling/STM.R",
       "CADS-covid-topic-modeling/topics_30.txt"
@@ -175,6 +171,32 @@
     ]
   },
   {
+    "title": "When Do Voters Punish Corrupt Politicians? Evidence from a Field and Survey Experiment",
+    "authors": [
+      "Yuri Kasahara",
+      "Miguel P. De Figueiredo",
+      "F. Daniel Hidalgo"
+    ],
+    "language": "R",
+    "data": "survey experiment",
+    "methods": [
+      "OLS"
+    ],
+    "themes": [
+      "corruption",
+      "party bias",
+      "polarization"
+    ],
+    "description": "Les mer: https://doi.org/10.1017/S0007123421000727",
+    "folder": "policies-make-politicians",
+    "files": [
+      "policies-make-politicians/codebook.pdf",
+      "policies-make-politicians/SPexperiment_data.RData",
+      "policies-make-politicians/replication_code.R",
+      "policies-make-politicians/log_file.txt"
+    ]
+  },
+  {
     "title": "COVID-19 klassifikasjon av misinformasjon",
     "authors": "Siri Frisli",
     "language": "R",
@@ -194,7 +216,6 @@
     "folder": "SSST-covid-classify-misinfo",
     "files": [
       "SSST-covid-classify-misinfo/Classification",
-      "SSST-covid-classify-misinfo/.DS_Store",
       "SSST-covid-classify-misinfo/Analysis",
       "SSST-covid-classify-misinfo/Processing",
       "SSST-covid-classify-misinfo/anms.xlsx",
