--- a/.github/workflows/build-metadata.yml
+++ b/.github/workflows/build-metadata.yml
@@ -21,7 +21,7 @@ jobs:
           python-version: 3.x
 
       - name: Install python dependencies
-        run: pip install pyyaml pandas openpyxl
+        run: pip install pyyaml pandas openpyxl pathspec
 
       - name: Generate projects.json
         run: python generate_projects_json.py
