--- a/dashboard/projects.json
+++ b/dashboard/projects.json
@@ -10,8 +10,7 @@
     ],
     "themes": [
       "alternative medier",
-      "tekstanalyse",
-      "mixed-methods"
+      "ytre h\u00f8yre"
     ],
     "description": "Unders\u00f8ker diskursive trender og endringer i m\u00e5ten alternative medier tilknyttet det norske ytre h\u00f8yre har representert islam \u00e5rene 2003-2021. Les mer her: http://urn.nb.no/URN:NBN:no-98456",
     "folder": "altmedia-islam-topic-modeling",
@@ -126,10 +125,10 @@
     ],
     "themes": [
       "sosiale medier",
-      "tekstanalyse",
+      "vaksiner",
       "misinformasjon"
     ],
-    "description": "Unders\u00f8ker diskursive trender innen vaksinemisinformasjon fra COVID-19 pandemien. Les mer her: https://doi.org/10.1177/20563051251347614",
+    "description": "Unders\u00f8ker diskursive trender innen vaksinemisinformasjon fra COVID-19- pandemien. Les mer her: https://doi.org/10.1177/20563051251347614",
     "folder": "CADS-covid-topic-modeling",
     "files": [
       "CADS-covid-topic-modeling/sentiments.R",
@@ -148,7 +147,7 @@
       "registerdata"
     ],
     "methods": [
-      "Forl\u00f8psanalyse"
+      "forl\u00f8psanalyse"
     ],
     "themes": [
       "sysselsetting",
@@ -200,7 +199,10 @@
     "title": "COVID-19 klassifikasjon av misinformasjon",
     "authors": "Siri Frisli",
     "language": "R",
-    "data": "text corpus",
+    "data": [
+      "text corpus",
+      "Twitter API"
+    ],
     "methods": [
       "API",
       "data wrangling",
@@ -209,10 +211,10 @@
     ],
     "themes": [
       "sosiale medier",
-      "tekstanalyse",
+      "covid",
       "misinformasjon"
     ],
-    "description": "Henter og klargj\u00f8r Twitter data, og trener en semi-supervised self-training klassifiaksjonsmodell for \u00e5 gjenkjenne misinformasjon. Les mer her: https://doi.org/10.1007/s42001-025-00367-x",
+    "description": "Henter og klargj\u00f8r Twitter-data, og trener en semi-supervised self-training klassifikasjonsmodell for \u00e5 gjenkjenne misinformasjon. Les mer her: https://doi.org/10.1007/s42001-025-00367-x",
     "folder": "SSST-covid-classify-misinfo",
     "files": [
       "SSST-covid-classify-misinfo/Classification",
