--- a/dashboard/projects.json
+++ b/dashboard/projects.json
@@ -37,7 +37,7 @@
     ],
     "themes": [
       "sosiale medier",
-      "tekstanalyse",
+      "covid",
       "misinformasjon"
     ],
     "description": "Unders\u00f8ker diskursive trender innen vaksinemisinformasjon fra COVID-19 pandemien. Les mer her: https://doi.org/10.1177/20563051251347614",
@@ -184,7 +184,7 @@
     ],
     "themes": [
       "alternative medier",
-      "tekstanalyse",
+      "ytre h\u00f8yre",
       "mixed-methods"
     ],
     "description": "Unders\u00f8ker diskursive trender og endringer i m\u00e5ten alternative medier tilknyttet det norske ytre h\u00f8yre har representert islam \u00e5rene 2003-2021. Les mer her: http://urn.nb.no/URN:NBN:no-98456",
@@ -209,7 +209,7 @@
     ],
     "themes": [
       "sosiale medier",
-      "tekstanalyse",
+      "covid",
       "misinformasjon"
     ],
     "description": "Henter og klargj\u00f8r Twitter data, og trener en semi-supervised self-training klassifiaksjonsmodell for \u00e5 gjenkjenne misinformasjon. Les mer her: https://doi.org/10.1007/s42001-025-00367-x",
